<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.demo</groupId>
	<artifactId>spring-oauth2-tests-parent</artifactId>
	<version>2.5.3.BUILD-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
      <module>common</module>
      <module>vanilla</module>
      <module>mappings</module>
      <module>form</module>
      <module>jwt</module>
      <module>approval</module>
      <module>jdbc</module>
      <module>jpa</module>
      <module>jaxb</module>
      <module>custom-grant</module>
      <module>multi</module>
      <module>client</module>
      <module>resource</module>
      <module>custom-authentication</module>
    </modules>

	<properties>
		<start-class>demo.Application</start-class>
		<java.version>1.7</java.version>
		<spring.version>4.3.30.RELEASE</spring.version>
	</properties>

	<name>spring-oauth2-tests</name>
	<description>Demo project for OAuth2 and Spring Boot</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.22.RELEASE</version>
		<relativePath/>
	</parent>

    <dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.security.oauth</groupId>
			<artifactId>spring-security-oauth2</artifactId>
			<version>2.5.3.BUILD-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-jwt</artifactId>
			<version>1.1.1.RELEASE</version>
		</dependency>
	</dependencies>
    </dependencyManagement>

    <build>
      <pluginManagement>
        <plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Tests.java</include>
					</includes>
					<excludes>
						<exclude>**/Abstract*.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<java.security.egd>file:/dev/./urandom</java.security.egd>
						<java.awt.headless>true</java.awt.headless>
					</systemPropertyVariables>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
	        <plugin>
		      <!--skip deploy (this is just a test module) -->
		      <artifactId>maven-deploy-plugin</artifactId>
		      <configuration>
		        <skip>true</skip>
		      </configuration>
	        </plugin>
        </plugins>
      </pluginManagement>
    </build>

	  <repositories>
		<repository>
		  <id>spring-snapshots</id>
		  <name>Spring Snapshots</name>
		  <url>https://repo.spring.io/libs-snapshot-local</url>
		  <snapshots>
			<enabled>true</enabled>
		  </snapshots>
		</repository>
		<repository>
		  <id>spring-milestones</id>
		  <name>Spring Milestones</name>
		  <url>https://repo.spring.io/libs-milestone-local</url>
		  <snapshots>
			<enabled>false</enabled>
		  </snapshots>
		</repository>
		<repository>
		  <id>spring-releases</id>
		  <name>Spring Releases</name>
		  <url>https://repo.spring.io/release</url>
		  <snapshots>
			<enabled>false</enabled>
		  </snapshots>
		</repository>
	  </repositories>
	  <pluginRepositories>
		<pluginRepository>
		  <id>spring-snapshots</id>
		  <name>Spring Snapshots</name>
		  <url>https://repo.spring.io/libs-snapshot-local</url>
		  <snapshots>
			<enabled>true</enabled>
		  </snapshots>
		</pluginRepository>
		<pluginRepository>
		  <id>spring-milestones</id>
		  <name>Spring Milestones</name>
		  <url>https://repo.spring.io/libs-milestone-local</url>
		  <snapshots>
			<enabled>false</enabled>
		  </snapshots>
		</pluginRepository>
	  </pluginRepositories>

	<profiles>
		<profile>
			<id>spring5</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-checkstyle-plugin</artifactId>
						<version>3.1.1</version>
						<dependencies>
							<dependency>
								<groupId>com.puppycrawl.tools</groupId>
								<artifactId>checkstyle</artifactId>
								<version>8.31</version>
							</dependency>
							<dependency>
								<groupId>io.spring.nohttp</groupId>
								<artifactId>nohttp-checkstyle</artifactId>
								<version>0.0.3.RELEASE</version>
							</dependency>
						</dependencies>
						<configuration>
							<configLocation>${maven.multiModuleProjectDirectory}/etc/nohttp/checkstyle.xml</configLocation>
							<includes>src/**/*,*</includes>
							<sourceDirectories>
								<sourceDirectory>./</sourceDirectory>
							</sourceDirectories>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
